# advent-hunt-2024-archive

./: .gitignore  README.md  download_missing.py  justfile  postprocess.py  pyproject.toml
.github/workflows/: deploy.yml
publish/: index.html
publish/about/: index.html
publish/attributions/: index.html
publish/puzzles/: index.html
publish/puzzles/a-mailbox-full-of-letters/: index.html
publish/puzzles/christmas-eve/: index.html
publish/puzzles/department-of-christmas-spirit/: index.html
publish/puzzles/double-checking-the-lists/: index.html
publish/puzzles/elf-condo-construction/: index.html
publish/puzzles/elf-on-the-ice-shelf/: index.html
publish/puzzles/frostys-winter-garden/: index.html
publish/puzzles/north-pole-records-office/: index.html
publish/puzzles/old-carolers-square/: index.html
publish/puzzles/ornament_maker/: index.html
publish/puzzles/preparing-for-christmas/: index.html
publish/puzzles/reds-christmas-tree/: index.html
publish/puzzles/reindeer-stables/: index.html
publish/puzzles/rudolphs-house/: index.html
publish/puzzles/sleigh-ride-through-a-snowy-field/: index.html
publish/puzzles/the-arctic-arena/: index.html
publish/puzzles/the-bifrost/: index.html
publish/puzzles/the-clauss-house/: index.html
publish/puzzles/the-gingerbread-bakery/: index.html
publish/puzzles/the-jousting-lists/: index.html
publish/puzzles/the-toy-factory/: index.html
publish/puzzles/under-the-tree/: index.html
publish/story/: index.html
publish/teams/: index.html
publish/updates/: index.html
publish/wrapup/: index.html
(+1021 files in other folders)
